# livestreamlist

./: .gitattributes  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml  release.yml
docs/: ROADMAP.md
docs/superpowers/diagnosis/: 2026-07-11-cb-black-window.md
docs/superpowers/plans/: 2026-04-24-chat-badges-and-toggles.md  2026-04-24-user-cards.md  2026-04-24-window-state-and-focus.md  2026-04-25-chat-mode-banners.md  2026-04-25-chaturbate-login.md  2026-04-26-youtube-multi-stream.md  2026-04-28-embed-rewrite.md  2026-04-29-command-chat-tabs.md  2026-04-30-command-layout-options.md  2026-05-01-spellcheck-pr1-rust-infra.md  2026-05-01-spellcheck-pr2-overlay-squiggles.md  2026-05-01-spellcheck-pr3-autocorrect.md  2026-05-01-spellcheck-pr4-context-menu.md  2026-05-01-spellcheck-pr5-preferences.md  2026-05-02-ipc-smoke-harness.md  2026-05-02-sub-anniversary-pr1-twitch-web-cookie.md  2026-05-02-sub-anniversary-pr2-detection-backend.md  2026-05-02-sub-anniversary-pr3-share-popout.md  2026-05-02-sub-anniversary-pr4-banner-ui.md  2026-05-02-sub-anniversary-pr5-browser-scrape.md  2026-05-03-chat-hyperlinks.md  2026-05-03-dynamic-tab-spacing.md  2026-05-03-reply-threading.md  2026-05-04-usernotice-banners.md  2026-06-21-accounts-panel-redesign.md  2026-06-21-richer-user-card.md  2026-07-06-notifications-core-slice.md  2026-07-07-columns-groups.md  2026-07-07-composer-power-features.md  2026-07-08-inline-video-slice2.md  2026-07-09-mpv-inline-video-slice-a.md  2026-07-10-mpv-inline-video-slice-b.md  2026-07-11-focus-redesign.md  2026-07-11-mpv-slice-c-windows.md
docs/superpowers/specs/: 2026-04-24-chat-badges-and-toggles-design.md  2026-04-24-user-cards-design.md  2026-04-24-window-state-and-focus-design.md  2026-04-25-chat-mode-banners-design.md  2026-04-25-chaturbate-login-design.md  2026-04-26-youtube-multi-stream-design.md  2026-04-28-embed-rewrite-design.md  2026-04-29-command-chat-tabs-design.md  2026-04-30-command-layout-options-design.md  2026-05-01-spellcheck-design.md  2026-05-02-ipc-smoke-harness-design.md  2026-05-02-sub-anniversary-banner-design.md  2026-05-03-chat-hyperlinks-design.md  2026-05-03-dynamic-tab-spacing-design.md  2026-05-03-reply-threading-design.md  2026-05-04-usernotice-banners-design.md  2026-06-21-accounts-panel-redesign-design.md  2026-06-21-chaturbate-follows-import-design.md  2026-06-21-chaturbate-private-show-display-design.md  2026-06-21-chaturbate-refresh-rate-limit-design.md  2026-06-21-richer-user-card-design.md  2026-07-06-notifications-core-slice-design.md  2026-07-07-columns-groups-design.md  2026-07-07-composer-power-features-design.md  2026-07-08-inline-video-slice2-design.md  2026-07-09-mpv-inline-video-design.md  2026-07-10-focus-redesign-design.md
docs/superpowers/spikes/: 2026-07-07-inline-video-playback-spike.md  2026-07-09-dmabuf-bare-test.py  2026-07-09-mpv-overlay-spike.py
docs/superpowers/spikes/2026-07-07-inline-video-harness/: README.md  iframe.html  measure.py  mkurl.py  mpv_run.sh  proxy.py  sample_sl.py  sl_serve.sh  spike.html  tsspike.html  webkit_harness.py  wid_harness.py
src/: App.jsx  DetachedChatRoot.jsx  ipc.js  main.jsx  tokens.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: chaturbate-login.json  default.json  twitch-web-login.json
src-tauri/sounds/: README.md
src-tauri/src/: channels.rs  config.rs  embed.rs  lib.rs  login_popup.rs  main.rs  mpv.rs  notify.rs  player.rs  refresh.rs  settings.rs  share_window.rs  smoke.rs  streamlink.rs  tray.rs  window_state.rs
src-tauri/src/auth/: callback_server.rs  chaturbate.rs  kick.rs  mod.rs  tokens.rs  turbo.rs  twitch.rs  twitch_web.rs  youtube.rs
src-tauri/src/chat/: badges.rs  emote_loader.rs  emotes.rs  irc.rs  kick.rs  links.rs  log_store.rs  mod.rs  models.rs  reconnect.rs  twitch.rs
src-tauri/src/notify/: gate.rs  mod.rs  sound.rs
src-tauri/src/smoke_harness/: README.md  smoke.rs
src-tauri/src/spellcheck/: dict.rs  mod.rs  personal.rs  tokenize.rs
src-tauri/src/users/: mod.rs  models.rs  store.rs
src-tauri/src/video/: mod.rs  passthrough.rs  session.rs  spawn.rs
src-tauri/tests/: smoke_binary.rs
src/components/: AddChannelDialog.jsx  AddColumnPicker.jsx  ChatModeBanner.jsx  ChatView.jsx  ChaturbateAuthBanner.jsx  ColumnView.jsx  Composer.jsx  ConfirmDialog.jsx  ContextMenu.jsx  ConversationDialog.jsx  DetachedChatRoot.jsx  EmbedLayer.jsx  EmbedSlot.jsx  EmbeddedChat.jsx  EmotePicker.jsx  EmoteText.jsx  FocusLiveStrip.jsx  FocusPicker.jsx  GroupSwitcher.jsx  InlineVideo.jsx  LoginButton.jsx  LoginPopupRoot.jsx  MessageContextMenu.jsx  MpvVideo.jsx  NicknameDialog.jsx  NoteDialog.jsx  PlaySplitButton.jsx  PreferencesDialog.jsx  ResizeHandles.jsx  SidebarPositionPicker.jsx  SocialsBanner.jsx  SpellcheckContextMenu.jsx  SpellcheckOverlay.jsx  SubAnniversaryBanner.jsx  TabStrip.jsx  TitleBanner.jsx  Tooltip.jsx  TwitchWebConnectPrompt.jsx  UserBadges.jsx  UserCard.jsx  (+5 more)
src/directions/: Columns.jsx  Command.jsx  Focus.jsx
src/hooks/: useAuth.js  useAuth.jsx  useChat.js  useCommandTabs.js  useDragRegion.js  useEventBanner.js  useLivestreams.js  useNicknames.jsx  usePlayerState.js  usePreferences.js  usePreferences.jsx  useRoomState.js  useSpellcheck.js  useSubAnniversary.js  useUserCard.js  useVideoBackend.js
src/utils/: autocorrect.js  channelLists.js  charCount.js  color.js  columnGroups.js  commandTabs.js  format.js  mainThreadLag.js  mergeSnapshots.js  mpvMountArgs.js  pickerModel.js  sentHistory.js  tabLayout.js  videoQueue.js
