[package]
name = "livestreamlist"
version = "0.1.0"
description = "Livestream monitor"
authors = ["mkeguy106"]
license = "MIT"
repository = "https://github.com/mkeguy106/livestreamlist"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "livestreamlist_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process"] }
anyhow = "1"
thiserror = "2"
url = "2"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
