[package]
name = "livestreamlist"
version = "0.1.0"
description = "Livestream monitor"
authors = ["mkeguy106"]
license = "MIT"
repository = "https://github.com/mkeguy106/livestreamlist"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "livestreamlist_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon", "unstable"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process"] }
anyhow = "1"
thiserror = "2"
url = "2"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
hunspell-rs = "0.4"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
lru = "0.12"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
urlencoding = "2.1.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gdkx11 = "0.18"
x11 = { version = "2", features = ["xlib"] }
webkit2gtk = "2.0"
wry = "0.54"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
