[package]
name = "livestreamlist"
version = "0.1.0"
description = "Livestream monitor"
authors = ["mkeguy106"]
license = "MIT"
repository = "https://github.com/mkeguy106/livestreamlist"
edition = "2021"
rust-version = "1.80"
default-run = "livestreamlist"

[lib]
name = "livestreamlist_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon", "unstable"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process"] }
anyhow = "1"
thiserror = "2"
url = "2"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
tempfile = { version = "3", optional = true }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
hunspell-rs = "0.4"
# hunspell-rs pulls in hunspell-sys with a hermetic `bundled` C++ build, but
# with hunspell-sys's default features OFF — which drops `bindgen/runtime`.
# Without runtime, clang-sys resolves libclang at link time via
# `@rpath/libclang.dylib`; on macOS CI runners that path isn't on the dyld
# search list and the hunspell-sys build script aborts with SIGABRT
# ("Library not loaded: @rpath/libclang.dylib"). Depending on hunspell-sys
# directly with its default features re-enables `bindgen/runtime`, so bindgen
# dlopens libclang at build time instead (clang-sys runtime discovery searches
# LIBCLANG_PATH, `xcode-select` toolchain, and the standard Xcode/LLVM dirs) —
# fixing macOS without touching CI, and unifying to the same bundled build.
hunspell-sys = { version = "0.3", features = ["bundled"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
lru = "0.12"
base64 = "0.22"
sha2 = "0.10"
sha1 = "0.10"
rand = "0.8"
regex = "1"
urlencoding = "2.1.3"
rookie = "0.5"
# The brief's symphonia-only feature list (`symphonia-vorbis`, etc.,
# default-features = false) compiles cleanly but is functionally broken for
# our bundled .ogg: rodio's `symphonia-vorbis` feature maps only to
# `symphonia/vorbis` (the Vorbis codec), not `symphonia/ogg` (the OGG
# container demuxer) — the two are separate symphonia features and rodio
# doesn't wire ogg-support alongside vorbis. Decoding failed with
# `IoError("end of stream")` on every .ogg (reproduced standalone outside
# this crate, including on a plain 1s single-tone clip, to rule out anything
# specific to our generated file). Falling back to the brief's documented
# fallback: default features, which pulls in `lewton` (pure-Rust Ogg Vorbis)
# instead of symphonia for vorbis and decodes the bundled sound correctly.
rodio = "0.20"

[features]
smoke = ["tauri/test", "dep:tempfile"]

# The smoke harness lives outside src/bin/ on purpose: tauri-cli's bundler
# unconditionally read_dir's src-tauri/src/bin/ and treats every file's stem
# as a binary to package (ignoring required-features and even non-.rs files),
# which made deb/rpm/appimage bundling fail trying to copy a nonexistent
# `smoke`/`README` from target/release/. Keeping it here excludes it from that
# scan while `--bin smoke` still works (it targets the bin name, not the path).
[[bin]]
name = "smoke"
path = "src/smoke_harness/smoke.rs"
required-features = ["smoke"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gdkx11 = "0.18"
x11 = { version = "2", features = ["xlib"] }
webkit2gtk = "2.0"
wry = "0.54"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
